--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "babel-plugin-angularjs-annotate": "^0.8.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "box-node-sdk": "^1.11.0",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "ngtemplate-loader": "^2.0.1",
     "node-sass": "^4.7.2",
