--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "Seed project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha 'src/**/*.spec.js'  --require babel-polyfill --compilers js:babel-register || true",
+    "test-coverage": "nyc -x 'src/**/*.spec.js' --reporter=text mocha 'src/**/*.spec.js'  --require babel-polyfill --compilers js:babel-register || true",
     "build": "webpack-dev-server",
     "build:prod": "webpack -p"
   },
@@ -19,26 +20,32 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-angularjs-annotate": "^0.8.2",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "box-node-sdk": "^1.11.0",
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
+    "mocha": "^5.0.0",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "ngtemplate-loader": "^2.0.1",
     "node-sass": "^4.7.2",
+    "nyc": "^11.4.1",
     "sass-loader": "^6.0.6",
+    "sinon": "^4.2.2",
     "transform-runtime": "0.0.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
     "@uirouter/angularjs": "^1.0.8",
-    "angular": "^1.6.8"
+    "angular": "^1.6.8",
+    "font-awesome": "^4.7.0"
   },
   "babel": {
     "presets": [
